aerolase/force-app/main/default/objects/Contact/fields/Are_you_a_New_or_Existing_Business__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_New_or_Existing_Business__c</fullName>
    <label>Are you a New or Existing Business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Existing Business</fullName>
            </value>
            <value>
                <fullName>Existing Business - Adding New Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>