aerolase/force-app/main/default/objects/Contact/fields/Contact_Owner_Not_Equal_To_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Not_Equal_To_Account_Owner__c</fullName>
    <formula>IF(Account.OwnerId !=  OwnerId,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Not Equal To Account Owner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>