aerolase/force-app/main/default/objects/Contact/fields/HubSpot_Latest_Form_Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Latest_Form_Submission_Type__c</fullName>
    <label>HubSpot - Latest Form Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Type</valueSetName>
    </valueSet>
</CustomField>