aerolase/force-app/main/default/objects/Contact/fields/HubSpot_Recent_Conversion__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Recent_Conversion__c</fullName>
    <label>HubSpot - Recent Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>