aerolase/force-app/main/default/objects/Contact/fields/Laser_Code_Entry__c.field-meta.xml
<CustomField>
    <fullName>Laser_Code_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Laser Code Entry</label>
    <type>Checkbox</type>
</CustomField>