aerolase/force-app/main/default/objects/Contact/fields/Lasers_Currently_Owned__c.field-meta.xml
<CustomField>
    <fullName>Lasers_Currently_Owned__c</fullName>
    <label>Lasers Currently Owned</label>
    <length>125</length>
    <type>Text</type>
</CustomField>