aerolase/force-app/main/default/objects/Contact/fields/Lead_Creation_to_Lead_Conversion_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_to_Lead_Conversion_Time__c</fullName>
    <formula>CreatedDate -  Lead_Creation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Creation to Lead Conversion Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>