aerolase/force-app/main/default/objects/Contact/fields/NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number__c</fullName>
    <label>NPI Number</label>
    <type>TextArea</type>
</CustomField>