aerolase/force-app/main/default/objects/Contact/fields/Orig_Warranty_Pulse_Count__c.field-meta.xml
<CustomField>
    <fullName>Orig_Warranty_Pulse_Count__c</fullName>
    <label>Orig Warranty Pulse Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>