aerolase/force-app/main/default/objects/Contact/fields/Pipeline_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Company_Name__c</fullName>
    <label>Pipeline Company Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>