aerolase/force-app/main/default/objects/Contact/fields/Pipeline_Latest_Activity_Category__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Latest_Activity_Category__c</fullName>
    <label>Pipeline Latest Activity Category</label>
    <length>120</length>
    <type>Text</type>
</CustomField>