aerolase/force-app/main/default/objects/Contact/fields/Pipeline_Latest_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Latest_Activity_Date__c</fullName>
    <label>Pipeline Latest Activity Date</label>
    <type>Date</type>
</CustomField>