aerolase/force-app/main/default/objects/Contact/fields/Pipeline_Latest_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Latest_Activity_Description__c</fullName>
    <label>Pipeline Latest Activity Description</label>
    <type>TextArea</type>
</CustomField>