aerolase/force-app/main/default/objects/Contact/fields/Pipeline_Source__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Source__c</fullName>
    <label>Pipeline Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>