aerolase/force-app/main/default/objects/Contact/fields/Pipeline_Timeframe_to_Buy__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Timeframe_to_Buy__c</fullName>
    <label>Pipeline Timeframe to Buy</label>
    <length>120</length>
    <type>Text</type>
</CustomField>