aerolase/force-app/main/default/objects/Contact/fields/PipelPipelinePersonIDine_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>PipelPipelinePersonIDine_Person_ID__c</fullName>
    <label>Pipeline Person ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>