aerolase/force-app/main/default/objects/Contact/fields/Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest__c</fullName>
    <label>Product of Interest</label>
    <length>100</length>
    <type>Text</type>
</CustomField>