aerolase/force-app/main/default/objects/Contact/fields/Purple_Labs__c.field-meta.xml
<CustomField>
    <fullName>Purple_Labs__c</fullName>
    <label>Purple Labs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purple_Labs_List</valueSetName>
    </valueSet>
</CustomField>