aerolase/force-app/main/default/objects/Contact/fields/Role_in_Decision_Making__c.field-meta.xml
<CustomField>
    <fullName>Role_in_Decision_Making__c</fullName>
    <label>Role in Decision Making</label>
    <length>120</length>
    <type>Text</type>
</CustomField>