aerolase/force-app/main/default/objects/Contact/fields/Treatment_of_Interests__c.field-meta.xml
<CustomField>
    <fullName>Treatment_of_Interests__c</fullName>
    <label>Treatment of Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ablative/Micro Peels</fullName>
            </value>
            <value>
                <fullName>Acne</fullName>
            </value>
            <value>
                <fullName>Aging Skin</fullName>
            </value>
            <value>
                <fullName>Autoimmune Diseases</fullName>
            </value>
            <value>
                <fullName>Hair</fullName>
            </value>
            <value>
                <fullName>Hyperpigmentation</fullName>
            </value>
            <value>
                <fullName>Melasma</fullName>
            </value>
            <value>
                <fullName>Nails</fullName>
            </value>
            <value>
                <fullName>Psoriasis</fullName>
            </value>
            <value>
                <fullName>Redness</fullName>
            </value>
            <value>
                <fullName>Rosacea</fullName>
            </value>
            <value>
                <fullName>Scars</fullName>
            </value>
            <value>
                <fullName>Skin of Color</fullName>
            </value>
            <value>
                <fullName>Skin Rejuvenation</fullName>
            </value>
            <value>
                <fullName>Skin Tightening</fullName>
            </value>
            <value>
                <fullName>Vascular Lesions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>