aerolase/force-app/main/default/objects/Contact/validationRules/Email_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Email)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email is mandatory</errorMessage>
</ValidationRule>