aerolase/force-app/main/default/objects/Contact/listViews/All_Contacts_Pac_NW.listView-meta.xml
<ListView>
    <fullName>All_Contacts_Pac_NW</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>State__c</columns>
    <columns>Work_Address__c</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>City__c</columns>
    <columns>Account.Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>WA,OR,AK,ID,MT,Washington,Montana,Idaho,Alaska,Oregon</value>
    </filters>
    <label>All Contacts - Pac NW</label>
</ListView>