aerolase/force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>State__c</columns>
    <columns>Work_Address__c</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>City__c</columns>
    <columns>Specialty__c</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>