aerolase/force-app/main/default/objects/Contact/listViews/Contacts_NV_Las_Vegas.listView-meta.xml
<ListView>
    <fullName>Contacts_NV_Las_Vegas</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>butler</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>NV,Nevada</value>
    </filters>
    <label>Contacts - NV (Las Vegas)</label>
</ListView>