aerolase/force-app/main/default/objects/Contact/listViews/Current_Clients.listView-meta.xml
<ListView>
    <fullName>Current_Clients</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Lifecycle_Stage__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <label>Current Customers</label>
</ListView>